--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCIkGme5H4Vo3cIzILBvFK",
+      "authorship_tag": "ABX9TyNTJWOLNyN4s/8VTcsvqc3N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,113 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Jacob Hornberger\n",
+        "#10/1/25\n",
+        "#Purpose: Code for HW4 that takes 4 different sorts and adds a run-time for random sort"
+      ],
+      "metadata": {
+        "id": "NxdSuJFwehAW"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "YL9L6RiZVAT7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import random\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#quicksort\n",
+        "def Quicksort(A,p,r,print_flag):\n",
+        "    if p < r:\n",
+        "        q  = Partition(A , p , r)\n",
+        "        if print_flag:\n",
+        "            print(A)\n",
+        "        Quicksort(A , p , q-1,print_flag)\n",
+        "        Quicksort(A , q+1 , r,print_flag)"
+      ],
+      "metadata": {
+        "id": "yuhRM1p0VVl-"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#insertion sort\n",
+        "def insertion(B, print_flag):\n",
+        "  n=len(B)\n",
+        "  for i in range(1, n):\n",
+        "    key = B[i]\n",
+        "    j = i - 1\n",
+        "    while j >= 0 and B[j] > key:\n",
+        "      B[j + 1] = B[j]\n",
+        "      j = j - 1\n",
+        "    B[j + 1] = key\n",
+        "    if print_flag:\n",
+        "      print(B)"
+      ],
+      "metadata": {
+        "id": "FQBKTWh_WED6"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#selection sort\n",
+        "def selection(A, print_flag):\n",
+        "    n = len(A)\n",
+        "    for i in range(n - 1):\n",
+        "        smallest = i\n",
+        "        for j in range(i + 1, n):\n",
+        "            if A[j] < A[smallest]:\n",
+        "                smallest = j\n",
+        "        A[i], A[smallest] = A[smallest], A[i]\n",
+        "        if print_flag:\n",
+        "            print(A)"
+      ],
+      "metadata": {
+        "id": "ughH-iCcbtkx"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MergeSort\n",
+        "def Mergesort(A,p,r,print_flag):\n",
+        "    if p >= r:\n",
+        "        return\n",
+        "    q = (p+r)//2\n",
+        "\n",
+        "    # Modify the following three calls:\n",
+        "    Mergesort()\n",
+        "    Mergesort()\n",
+        "    Merge()\n",
+        "\n",
+        "    if print_flag:\n",
+        "      print(A)\n",
+        "    return"
+      ],
+      "metadata": {
+        "id": "dO-jYPdWcRaq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
