--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCIkGme5H4Vo3cIzILBvFK",
+      "authorship_tag": "ABX9TyNtXeJEmody7dTyaLrAEep7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,47 @@
         "id": "bpgkjGzw1XQ0"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import random\n",
+        "import time\n",
+        "from statistics import mean\n",
+        "\n",
+        "def quickselect(A, i):\n",
+        "    \"\"\"Return the i-th smallest element of A (1-based i).\"\"\"\n",
+        "    if len(A) == 1:\n",
+        "        return A[0]\n",
+        "\n",
+        "    pivot = random.choice(A)\n",
+        "    lows = [x for x in A if x < pivot]\n",
+        "    highs = [x for x in A if x > pivot]\n",
+        "    pivots = [x for x in A if x == pivot]\n",
+        "\n",
+        "    if i <= len(lows):\n",
+        "        return quickselect(lows, i)\n",
+        "    elif i <= len(lows) + len(pivots):\n",
+        "        return pivot\n",
+        "    else:\n",
+        "        return quickselect(highs, i - len(lows) - len(pivots))\n",
+        "\n",
+        "\n",
+        "# Quick test harness\n",
+        "def time_quickselect(n, trials=5):\n",
+        "    times = []\n",
+        "    for _ in range(trials):\n",
+        "        A = list(range(n))                      # sorted\n",
+        "        random.shuffle(A)                       # random permutation\n",
+        "        k = random.randint(1, n)\n",
+        "        t0 = time.perf_counter()\n",
+        "        _ = quickselect(A, k)\n",
+        "        t1 = time.perf_counter()\n",
+        "        times.append(t1 - t0)\n",
+        "    return mean(times)\n",
+        "\n",
+        "# Example runs (small n)\n",
+        "if __name__ == \"__main__\":\n",
+        "    for n in [100, 1000, 5000, 10000]:\n",
+        "        print(n, time_quickselect(n, trials=3))\n"
+      ]
     }
   ]
 }
