--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtXeJEmody7dTyaLrAEep7",
+      "authorship_tag": "ABX9TyO25KOT4e5AcB327W+nO0R1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,33 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/hornbjd22/CS315/blob/main/HW6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "#code from Homework sheet\n",
+        "def quickselect(A, i):\n",
+        "  if len(A) == 1:\n",
+        "    return A[0]\n",
+        "\n",
+        "  pivot = random.choice(A)\n",
+        "  lows = [x for x in A if x < pivot]\n",
+        "  highs = [x for x in A if x > pivot]\n",
+        "  pivots = [x for x in A if x == pivot]\n",
+        "\n",
+        "  if i <= len(lows):\n",
+        "    return quickselect(lows, i)\n",
+        "  elif i <= len(lows) + len(pivots):\n",
+        "    return pivot\n",
+        "  else:\n",
+        "    return quickselect(highs, i - len(lows) - len(pivots))"
+      ],
+      "metadata": {
+        "id": "8FBuLKoA3Q8N"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
